--- a/css/semblance.css
+++ b/css/semblance.css
@@ -71,6 +71,30 @@
   }
 }
 
+#logo {
+	height: 45vh;
+	width: 15vw;
+	padding-top: 10vh;
+	padding-left: 42vw;
+	z-index: 10;
+	animation: fadein 5s;
+	animation-delay: 5s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes fadein {
+    from { 
+    	opacity: 0;
+    	height: 0;
+		width: 0;
+     }
+    to   { 
+    	opacity: 1; 
+    	height: 45vh;
+		width: 15vw;
+	}
+}
+
 #gallery {
 	background-color: cyan;
 	width: 100vw;
