--- a/css/semblance.css
+++ b/css/semblance.css
@@ -7,6 +7,28 @@
   	position: relative;
 }
 
+#introbg1{
+	background-color: rgb(195, 20, 51);
+	height: 0;
+	width: 0;
+	animation: bg 3s;
+	animation-delay: 3.5s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes bg{
+	0%{
+		float: right;
+		height: 100vh;
+	}
+	100%{
+		position: relative;
+		height: 100vh;
+		width: 50vw;
+		float: right;
+	}
+}
+
 #messenger {
   font-family: 'Roboto';
   color: #e90418;
@@ -72,28 +94,142 @@
 }
 
 #logo {
-	height: 45vh;
-	width: 15vw;
+	height: 0;
+	width: 0;
 	padding-top: 10vh;
 	padding-left: 42vw;
 	z-index: 10;
 	animation: fadein 5s;
-	animation-delay: 5s;
+	animation-delay: 8s;
 	animation-fill-mode: forwards;
+	position: absolute;
 }
 
 @keyframes fadein {
     from { 
     	opacity: 0;
-    	height: 0;
-		width: 0;
+		height: 45vh;
+		width: 15vw;
      }
     to   { 
     	opacity: 1; 
-    	height: 45vh;
+  		height: 45vh;
 		width: 15vw;
 	}
 }
+
+#quote1 {
+	color: black;
+	font-size: 0px;
+	position: absolute;
+	z-index:20;
+	height: 0;
+	width: 0;
+	padding-top: 17vh;
+	padding-left: 5vw;
+	font-family: 'Barlow Semi Condensed', sans-serif;
+	animation: fadein2 4s;
+	animation-delay: 10s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes fadein2 {
+	0%{
+		opacity: 0;
+		height: 30vh;
+		width: 30vw;
+		font-size: 40px;
+	}
+	100%{
+		opacity: 1;
+		height: 30vh;
+		width: 30vw;
+		font-size: 40px;
+	}
+}
+
+#scroll {
+	height: 0;
+	width: 0;
+	color: white;
+	font-family: 'Roboto';
+	letter-spacing: 2px;
+	font-weight: none;
+	padding-top:65vh;
+	text-align: center;
+	font-size:0px;
+	animation: fadein1 2s infinite;
+	animation-delay: 13s;
+	animation-fill-mode: forwards;
+	position: absolute;
+	z-index: 10;
+}
+
+@keyframes fadein1 {
+    0% { 
+    	opacity: 0;
+		height: 10vh;
+		width: 100vw;
+		text-align: center;
+		font-size:20px;
+     }
+    50%   { 
+    	opacity: 1; 
+  		height: 10vh;
+		width: 100vw;
+		font-size:20px;
+	}
+	100% { 
+    	opacity: 0;
+		height: 10vh;
+		width: 100vw;
+		text-align: center;
+		font-size:20px;
+     }
+}
+
+
+@-webkit-keyframes mask-move {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(129px);
+            transform: translateX(129px);
+  }
+}
+@keyframes mask-move {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(129px);
+            transform: translateX(129px);
+  }
+}
+@-webkit-keyframes mask-inner-move {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-129px);
+            transform: translateX(-129px);
+  }
+}
+@keyframes mask-inner-move {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-129px);
+            transform: translateX(-129px);
+  }
+}
+
 
 #gallery {
 	background-color: cyan;
