--- a/css/semblance.css
+++ b/css/semblance.css
@@ -440,6 +440,68 @@ body {
 	left: 0px;
 }
 
+#address{
+	color: white;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 0.95vw;
+	width: 20vw;
+	padding: 1vw;
+	position: absolute;
+	top: 3vw;
+	left:4vw;
+}
+
+#phone{
+	color: white;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 0.95vw;
+	width: 20vw;
+	padding: 1vw;
+	position: absolute;
+	bottom: 6vw;
+	left:4vw;
+}
+
+#email{
+	color: white;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 0.95vw;
+	width: 20vw;
+	padding: 1vw;
+	position: absolute;
+	top: 3vw;
+	right:2vw;
+}
+
+#socialbox{
+	color: white;
+	font-size: 2vw;
+	width: 20vw;
+	padding: 1vw;
+	position: absolute;
+	bottom: 6vw;
+	right:2vw;
+}
+
+#socialbox i{
+	padding: 0.6vw;
+}
+
+#socialbox i:hover{
+	color: #00c853;
+}
+
+.contactgroupheading{
+	color: #00c853;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 1.10vw;
+	padding-bottom: 0.6vw;
+}
+
+.contactgroupheading i{
+	padding-right: 1vw;
+}	
+
 #map {
 	width: 30vw;
 	height: 40vh;
@@ -449,7 +511,7 @@ body {
 }
 
 #contactbottom {
-	background-color: #f3115b;
+	background-color: #00c853;
 	width: 48vw;
 	height: 15vh;
 	position: absolute;
