--- a/css/semblance.css
+++ b/css/semblance.css
@@ -522,7 +522,7 @@ body {
 /*
 Tablet mode
 */
-@media (min-width: 600px) and (max-width: 1200px) {
+@media (max-width: 1200px) {
 
 #gallery {
 	background-color: #1e90ff;
