--- a/css/semblance.css
+++ b/css/semblance.css
@@ -605,12 +605,12 @@ display: none;
 #events {
 	background-color: #ffd200;
 	width: 100vw;
-	height: auto;
+	height: 100vw;
 	position: relative;
 }
 	
 #eventshead {
-	position: relative;
+	position: absolute;
 	top: 3vw;
 	left: 8vw;
 	font-family: 'Montserrat', sans-serif;
@@ -621,15 +621,16 @@ display: none;
 }
 
 #detail{
-	position: relative;
-	right: 8vw;
-	top: 10.5vw;
-	width: 35vw;
-	height: 9vw;
+	position: absolute;
+	left: 8vw;
+	top: 17vw;
+	width: 90vw;
+	height: 15vw;
 	font-family: 'Roboto Condensed', sans-serif;
 	color: black;
-	font-size: 1vw;
+	font-size: 2vw;
 	z-index: 999;
+	padding: 1vw;
 }
 
 #detailheading{
@@ -638,7 +639,7 @@ display: none;
 }	
 
 .event {
-	height: 50vw;
+	height: 45vw;
 	width: 30vw;
 	font-size: 2vw;
 	font-family: 'Roboto Condensed', sans-serif;
@@ -665,7 +666,8 @@ display: none;
 }	
 
 .eventlist {
-	position: relative;
+	position: absolute;
+	top: 40vw;
 	height: 55vw;
 	width: 70vw;
 	justify-content: space-around;
@@ -679,22 +681,22 @@ display: none;
 
 #eventcard {
 	background-color: white;
-	width: 100vw;
-	height: 19vw;
-	bottom: 0px;
+	width: 90vw;
+	height: 40vw;
+	top: 50vw;
 	right: 0px;
-	position: relative;
+	position: absolute;
 }
 
 #members {
-	background-color: white;
+	background-color: #f3115b;
 	width: 100vw;
-	height: auto;
+	height: 100vw;
 	position: relative;
 }	
 	
 #membershead {
-	position: relative;
+	position: absolute;
 	top: 3vw;
 	left: 8vw;
 	font-family: 'Montserrat', sans-serif;
@@ -705,21 +707,23 @@ display: none;
 }
 
 #memberinfo {
-	background-color: #f3115b;
-	width: 100vw;
-	height: 35vw;
-	position: relative;
+	background-color: white;
+	width: 90vw;
+	height: 50vw;
+	position: absolute;
+	left: 0px;
+	bottom: 0px;
 }
 	
 #contact {
 	background-color: white;
 	width: 100vw;
-	height: auto;
+	height: 100vw;
 	position: relative;
 }	
 	
 #contacthead {
-	position: relative;
+	position: absolute;
 	top: 3vw;
 	left: 8vw;
 	font-family: 'Montserrat', sans-serif;
@@ -731,52 +735,52 @@ display: none;
 
 #contactinfo {
 	background-color: black;
-	width: 100vw;
-	height: 50vw;
-	position: relative;
+	width: 90vw;
+	height: 35vw;
+	position: absolute;
 }
 
 #address{
 	color: white;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 2vw;
-	width: 40vw;
-	padding: 2vw;
+	font-size: 1.8vw;
+	width: 36vw;
+	padding: 1vw;
 	position: absolute;
-	top: 6vw;
-	left:8vw;
+	top: 3vw;
+	left:6vw;
 }
 
 #phone{
 	color: white;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 2vw;
-	width: 40vw;
-	padding: 2vw;
+	font-size: 1.8vw;
+	width: 36vw;
+	padding: 1vw;
 	position: absolute;
-	bottom: 12vw;
-	left:8vw;
+	bottom: 6vw;
+	left:6vw;
 }
 
 #email{
 	color: white;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 2vw;
-	width: 40vw;
-	padding: 2vw;
+	font-size: 1.8vw;
+	width: 36vw;
+	padding: 1vw;
 	position: absolute;
-	top: 6vw;
-	right:4vw;
+	top: 3vw;
+	right:3vw;
 }
 
 #socialbox{
 	color: white;
 	font-size: 4vw;
-	width: 40vw;
-	padding: 2vw;
+	width: 36vw;
+	padding: 1vw;
 	position: absolute;
-	bottom: 12vw;
-	right:4vw;
+	bottom: 6vw;
+	right:3vw;
 }
 
 #socialbox i{
@@ -799,18 +803,19 @@ display: none;
 }	
 
 #map {
-	width: 100vw;
-	height: 70vw;
-	position: relative;
+	width: 70vw;
+	height: 40vw;
+	position: absolute;
 	right: 0vw;
-	bottom: 0vw;
+	bottom: 38vw;
+	background-color: grey;
 }
 
 #contactbottom {
 	background-color: #00c853;
-	width: 100vw;
-	height: 10vw;
-	position: relative;
+	width: 10vw;
+	height: 35vw;
+	position: absolute;
 	bottom: 0px;
 	right: 0px;
 }
